--- a/sakila-business-webapi/src/main/resources/static/app/views/actormanagement.html
+++ b/sakila-business-webapi/src/main/resources/static/app/views/actormanagement.html
@@ -53,12 +53,12 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="u in ctrl.actors">
-                    <td><span ng-bind="u.actorId"></span></td>
-                    <td><span ng-bind="u.lastName"></span></td>
-                    <td><span ng-bind="u.firstName"></span></td>
+                <tr ng-repeat="a in ctrl.actors">
+                    <td><span ng-bind="a.actorId"></span></td>
+                    <td><span ng-bind="a.lastName"></span></td>
+                    <td><span ng-bind="a.firstName"></span></td>
                     <td>
-                    <button type="button" ng-click="ctrl.edit(u.actorId)" class="btn btn-success custom-width">Edit</button>  <button type="button" ng-click="ctrl.remove(u.actorId)" class="btn btn-danger custom-width">Remove</button>
+                    <button type="button" ng-click="ctrl.edit(a.actorId)" class="btn btn-success custom-width">Edit</button>  <button type="button" ng-click="ctrl.remove(a.actorId)" class="btn btn-danger custom-width">Remove</button>
                     </td>
                 </tr>
             </tbody>
