"@JsonIgnore" pour boucle infinie

--- a/sakila-business-webapi/src/main/resources/static/app/views/customermanagement.html
+++ b/sakila-business-webapi/src/main/resources/static/app/views/customermanagement.html
@@ -141,11 +141,11 @@
 						</div>
 					</div>
 
-					<div class="row">
-						<div class="form-actions floatRight">
-							<input type="submit"
-								value="{{!ctrl.customer.customerId ? 'Add' : 'Update'}}"
-								class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
+				<div class="row">
+                <div class="form-actions floatRight">
+                    <input type="submit"  value="{{!ctrl.customer.customerId ? 'Add' : 'Update'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
+                </div>
+            </div>
 							<button type="button" ng-click="ctrl.reset()"
 								class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Reset
 								Form</button>
@@ -188,4 +188,5 @@
 	</div>
 	<script>
 		$("#city_id").val(1);
-	</script>
+
+	
