--- a/sakila-business-webapi/src/main/resources/static/app/views/actormanagement.html
+++ b/sakila-business-webapi/src/main/resources/static/app/views/actormanagement.html
@@ -2,13 +2,13 @@
 <div class="panel panel-default">
     <div class="panel-heading"><span class="lead">Actor Management Form </span></div>
     <div class="formcontainer">
-        <form ng-submit="ctrl.submit()" name="myForm" class="form-horizontal">
-            <input type="hidden" ng-model="ctrl.actor.actorId" />
+        <form ng-submit="submit()" name="myForm" class="form-horizontal">
+            <input type="hidden" ng-model="actor.actorId" />
             <div class="row">
                 <div class="form-group col-md-12">
                     <label class="col-md-2 control-lable" for="file">Last Name</label>
                     <div class="col-md-7">
-                        <input type="text" ng-model="ctrl.actor.lastName" name="lastName" class="form-control input-sm" placeholder="Enter your name" required ng-minlength="3"/>
+                        <input type="text" ng-model="actor.lastName" name="lastName" class="form-control input-sm" placeholder="Enter your name" required ng-minlength="3"/>
                         <div class="has-error" ng-show="myForm.$dirty">
                             <span ng-show="myForm.lastName.$error.required">This is a required field</span>
                             <span ng-show="myForm.lastName.$error.minlength">Minimum length required is 3</span>
@@ -22,7 +22,7 @@
                 <div class="form-group col-md-12">
                     <label class="col-md-2 control-lable" for="file">First Name</label>
                     <div class="col-md-7">
-                        <input type="text" ng-model="ctrl.actor.firstName" name="firstName"  class="form-control input-sm" placeholder="Enter Actor First Name. [This field is validation free]"/>
+                        <input type="text" ng-model="actor.firstName" name="firstName"  class="form-control input-sm" placeholder="Enter Actor First Name. [This field is validation free]"/>
                         <div class="has-error" ng-show="myForm.$dirty">
                             <span ng-show="myForm.firstName.$error.required">This is a required field</span>
                         </div>
@@ -32,8 +32,8 @@
 
             <div class="row">
                 <div class="form-actions floatRight">
-                    <input type="submit"  value="{{!ctrl.actor.actorId ? 'Add' : 'Update'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
-                    <button type="button" ng-click="ctrl.reset()" class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Reset Form</button>
+                    <input type="submit"  value="{{!actor.actorId ? 'Add' : 'Update'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
+                    <button type="button" ng-click="reset()" class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Reset Form</button>
                 </div>
             </div>
         </form>
@@ -53,12 +53,12 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="a in ctrl.actors">
+                <tr ng-repeat="a in actors">
                     <td><span ng-bind="a.actorId"></span></td>
                     <td><span ng-bind="a.lastName"></span></td>
                     <td><span ng-bind="a.firstName"></span></td>
                     <td>
-                    <button type="button" ng-click="ctrl.edit(a.actorId)" class="btn btn-success custom-width">Edit</button>  <button type="button" ng-click="ctrl.remove(a.actorId)" class="btn btn-danger custom-width">Remove</button>
+                    <button type="button" ng-click="edit(a.actorId)" class="btn btn-success custom-width">Edit</button>  <button type="button" ng-click="remove(a.actorId)" class="btn btn-danger custom-width">Remove</button>
                     </td>
                 </tr>
             </tbody>
