--- a/sakila-business-webapi/src/main/resources/static/app/views/countrymanagement.html
+++ b/sakila-business-webapi/src/main/resources/static/app/views/countrymanagement.html
@@ -1,11 +1,11 @@
-<div class="generic-container" ng-controller="CountryController as ctrl">
+<div class="generic-container">
           <div class="panel panel-default">
               <div class="panel-heading"><span class="lead">Country Management Form </span></div>
               <div class="formcontainer">
                   <form ng-submit="ctrl.submit()" name="myForm" class="form-horizontal">
-                  
+
                       <input type="hidden" ng-model="ctrl.country.countryId" />
-                      
+
                       <div class="row">
                           <div class="form-group col-md-12">
                               <label class="col-md-2 control-lable" for="file">id: {{ctrl.country.countryId}} - Name:</label>
@@ -29,7 +29,7 @@
                   </form>
               </div>
           </div>
-          
+
           <div class="panel panel-default">
                 <!-- Default panel contents -->
               <div class="panel-heading"><span class="lead">List of Countries </span></div>
@@ -55,4 +55,4 @@
                   </table>
               </div>
           </div>
-      </div>      
+      </div>
