--- a/sakila-business-webapi/src/main/resources/static/app/views/filmmanagement.html
+++ b/sakila-business-webapi/src/main/resources/static/app/views/filmmanagement.html
@@ -1,54 +1,223 @@
-<div class="generic-container">
-     <div class="panel panel-default">
-         <div class="panel-heading"><span class="lead">Film Management Form</span></div>
-         <div class="formcontainer">
-             <form ng-submit="ctrl.submit()" name="myForm" class="form-horizontal">
-                 <input type="hidden" ng-model="ctrl.film.filmId" />
-                 <div class="row">
-                     <div class="form-group col-md-12">
-                         <label class="col-md-2 control-lable" for="filmTitle">Film name</label>
-                         <div class="col-md-7">
-                             <input type="text" ng-model="ctrl.film.title" name="filmTitle" class="form-control input-sm" placeholder="Enter the new film name" required ng-minlength="3"/>
-                             <div class="has-error" ng-show="myForm.$dirty">
-                                 <span ng-show="myForm.filmTitle.$error.required">This is a required field</span>
-                                 <span ng-show="myForm.filmTitle.$error.minlength">Minimum length required is 3</span>
-                                 <span ng-show="myForm.filmTitle.$invalid">This field is invalid </span>
-                             </div>
-                         </div>
-                     </div>
-                 </div>
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<span class="lead">Film Management Form</span>
+			</div>
 
-                 <div class="row">
-                     <div class="form-actions floatRight">
-                         <input type="submit"  value="{{!ctrl.film.filmId ? 'Add' : 'Update'}}" class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
-                         <button type="button" ng-click="ctrl.reset()" class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Reset Form</button>
-                     </div>
-                 </div>
-             </form>
-         </div>
-     </div>
-     <div class="panel panel-default">
-           <!-- Default panel contents -->
-         <div class="panel-heading"><span class="lead">List of Films</span></div>
-         <div class="tablecontainer">
-             <table class="table table-hover">
-                 <thead>
-                     <tr>
-                         <th>ID.</th>
-                         <th>Name</th>
-                         <th width="20%"></th>
-                     </tr>
-                 </thead>
-                 <tbody>
-                     <tr ng-repeat="c in ctrl.films">
-                         <td><span ng-bind="c.filmId"></span></td>
-                         <td><span ng-bind="c.name"></span></td>
-                         <td>
-                         <button type="button" ng-click="ctrl.edit(c.filmId)" class="btn btn-success custom-width">Edit</button>  <button type="button" ng-click="ctrl.remove(c.filmId)" class="btn btn-danger custom-width">Remove</button>
-                         </td>
-                     </tr>
-                 </tbody>
-             </table>
-         </div>
-     </div>
- </div>
+			<div class="formcontainer">
+
+				<form ng-submit="ctrl.submit()" name="myForm"
+					class="form-horizontal">
+					<fieldset style = "padding:0 20px 20px 20px; margin-bottom:10px; border:1px solid ">
+ 					<legend style = "text-align: center"> The movie</legend>
+					
+					<!-- <input type="hidden" ng-model="ctrl.film.filmId" /> -->
+
+					<!-- 			title 			-->
+					<div class="row">
+						<div class="form-group col-md-12">
+							<label class="col-md-2 control-lable" for="file">Film
+								title</label>
+							<div class="col-md-7">
+								<input type="text" ng-model="ctrl.film.title" name="title"
+									class="form-control input-sm" placeholder="Enter the title"
+									required />
+								<div class="has-error" ng-show="myForm.$dirty">
+									<span ng-show="myForm.title.$error.required">This is a
+										required field</span> <span ng-show="myForm.title.$invalid">This
+										field is invalid </span>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- 			Description 			-->
+					<div class="row">
+						<div class="form-group col-md-12">
+							<label class="col-md-2 control-lable" for="file">Description</label>
+							<div class="col-md-7">
+								<textarea name="description" ng-model="ctrl.film.description"
+									class="form-control input-sm" rows="10" cols="50"
+									required="required"> Description </textarea>
+								<div class="has-error" ng-show="myForm.$dirty">
+									<span ng-show="myForm.firstName.$error.required">This is
+										a required field</span>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- 			Release 			-->
+					<div class="row">
+						<div class="form-group col-md-12">
+							<label class="col-md-2 control-lable" for="release">Release
+								year</label>
+							<div class="col-md-7">
+								<input type="number" ng-model="ctrl.film.release" name="release"
+									class="form-control input-sm"
+									placeholder="Enter the release year" ng-maxlength="4"/>
+								<div class="has-error" ng-show="myForm.$dirty">
+									<span ng-show="myForm.release.$error.number" >This is
+										a need a number</span>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- 			Language 			-->
+					<div class="row">
+						<label class="col-md-2 control-lable" for="selectFilmLanguage">Select
+							the language: </label>
+						<div class="col-md-7" >
+							<select name="selectFilmLanguage" ng-model="ctrl.film.language">
+								<option value="">Select the language :</option>
+								<option ng-repeat="c in ctrl.languages" value="{{c.languageId}}">{{c.name}}</option>
+							</select>
+						</div>
+					</div>
+					</br>
+
+					<div class="has-error" ng-show="myForm.$dirty">
+						<span ng-show="myForm.firstName.$error.required">This is a
+							required field</span>
+					</div>
+
+					<!-- 			Rental duration 			-->
+					<div class="row">
+						<div class="form-group col-md-12">
+							<label class="col-md-2 control-lable" for="rentalDuration">Rental
+								duration</label>
+							<div class="col-md-7">
+								<input type="number" ng-model="ctrl.film.rentalDuration"
+									name="rentalDuration" class="form-control input-sm"
+									placeholder="Enter the rental duration" min="0" max="999" />
+								<div class="has-error" ng-show="myForm.$dirty">
+									<span ng-show="myForm.firstName.$error.required">This is
+										a required field</span>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- 			Rental rate 			-->
+					<div class="row">
+						<div class="form-group col-md-12">
+							<label class="col-md-2 control-lable" for="rentalRate">Rental
+								rate</label>
+							<div class="col-md-7">
+								<input type="number" ng-model="ctrl.film.rentalRate"
+									name="rentalRate" class="form-control input-sm"
+x²									placeholder="Enter the rental rate" min="0" max="5" />
+								<div class="has-error" ng-show="myForm.$dirty">
+									<span ng-show="myForm.firstName.$error.required">This is
+										a required field</span>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- 			Lenght 			-->
+					<div class="row">
+						<div class="form-group col-md-12">
+							<label class="col-md-2 control-lable" for="lenght">Film
+								length</label>
+							<div class="col-md-7">
+								<input type="number" ng-model="ctrl.film.lenght" name="lenght"
+									class="form-control input-sm"
+									placeholder="Enter the film length" min="0" />
+								<div class="has-error" ng-show="myForm.$dirty">
+									<span ng-show="myForm.firstName.$error.required">This is
+										a required field</span>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- 			rating 			-->
+					<div class="row">
+						<label class="col-md-2 control-lable" for="selectRate">Select
+							the rate</label>
+						<div class="col-md-7">
+							<select name="selectRate" ng-model="ctrl.film.rate">
+								<option value="">Select the rate</option>
+								<option value="G">G</option>
+								<option value="PG">PG</option>
+								<option value="PG-13">PG-13</option>
+								<option value="R">R</option>
+								<option value="NC-17">NC-17</option>
+							</select>
+						</div>
+					</div>
+					</br>
+
+					<div class="has-error" ng-show="myForm.$dirty">
+						<span ng-show="myForm.firstName.$error.required">This is a
+							required field</span>
+					</div>
+</fieldset>
+			
+
+					<div class="has-error" ng-show="myForm.$dirty">
+						<span ng-show="myForm.firstName.$error.required">This is a
+							required field</span>
+					</div>
+
+					<!-- 			Button 			-->
+
+					<div class="row">
+						<div class="form-actions floatRight">
+							<input type="submit"
+								value="{{!ctrl.film.filmId ? 'Add' : 'Update'}}"
+								class="btn btn-primary btn-sm" ng-disabled="myForm.$invalid">
+							<button type="button" ng-click="ctrl.reset()"
+								class="btn btn-warning btn-sm" ng-disabled="myForm.$pristine">Reset
+								Form</button>
+						</div>
+					</div>
+
+				</form>
+			</div>
+
+		</div>
+		<div class="panel panel-default">
+			<!-- Default panel contents -->
+			<div class="panel-heading">
+				<span class="lead">List of Films </span>
+			</div>
+			<div class="tablecontainer">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th>ID.</th>
+							<th>Title</th>
+							<th>Description</th>
+							<th>Release year</th>
+							<th>Rental duration</th>
+							<th>Rental rate</th>
+							<th>Film length</th>
+							<th>Language</th>
+							<th>Special features</th>
+							<th width="20%"></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="u in ctrl.films">
+							<td><span ng-bind="u.filmId"></span></td>
+							<td><span ng-bind="u.title"></span></td>
+							<td><span ng-bind="u.description"></span></td>
+							<td><span ng-bind="u.releaseYear"></span></td>
+							<td><span ng-bind="u.rentalDuration"></span></td>
+							<td><span ng-bind="u.rentalRate"></span></td>
+							<td><span ng-bind="u.lenght"></span></td>
+							<td><span ng-bind="u.language"></span></td>
+							<td><span ng-bind="u.features"></span></td>
+							<td>
+								<button type="button" ng-click="ctrl.edit(u.filmId)"
+									class="btn btn-success custom-width">Edit</button>
+								<button type="button" ng-click="ctrl.remove(u.filmId)"
+									class="btn btn-danger custom-width">Remove</button>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+</div>
