Ville select ok

--- a/sakila-store-frontend/app/views/citymanagement.html
+++ b/sakila-store-frontend/app/views/citymanagement.html
@@ -28,7 +28,7 @@
                               <div class="col-md-7">
                 								<select name="selectCountry" ng-model="ctrl.city.countryId">
                 									<option value="">Select the country :</option>
-                									<option ng-repeat="c in ctrl_country.countries" value="{{c.countryId}}">{{c.country}}</option>
+                									<option ng-repeat="c in countries" value="{{c.countryId}}">{{c.country}}</option>
                 								</select>
                 							</div>
                           </div>
