--- a/sakila-store-frontend/app/views/countrymanagement.html
+++ b/sakila-store-frontend/app/views/countrymanagement.html
@@ -48,7 +48,7 @@
                               <td><span ng-bind="c.country">{{c.country}}</span></td>
                               <td>
                               	<button type="button" ng-click="ctrl.edit(c)" class="btn btn-success custom-width">Edit</button>
-                              	<!-- <button type="button" ng-click="ctrl.remove(c.countryId)" class="btn btn-danger custom-width">Remove</button> -->
+                              	<button type="button" ng-click="ctrl.remove(c.countryId)" class="btn btn-danger custom-width">Remove</button>
                               </td>
                           </tr>
                       </tbody>
